# strawberry-azure-auth

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  release.yaml
strawberry_azure_auth/: __init__.py  extension.py  openid.py  permissions.py  types.py  utils.py
strawberry_azure_auth/channels/: __init__.py  context.py  handlers.py  schema.py
strawberry_azure_auth/django/: context.py
